[package]
name = "restate-example"
version = "0.0.1"
edition = "2021"

[dependencies]
restate-sdk = { version = "0.6.0" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
rand = "0.8.5"
anyhow = "1.0.86"
serde = { version = "1.0.208", features = ["derive"] }
tracing = "0.1.41"

[[example]]
name = "example"
path = "src/main.rs"